<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_briefing"
        android:icon="@drawable/ic_briefing"
        android:title="@string/title_briefing" />

    <item
        android:id="@+id/navigation_trending"
        android:icon="@drawable/ic_briefing"
        android:title="@string/title_trending" />

    <item
        android:id="@+id/navigation_premium"
        android:icon="@drawable/ic_premium_bottom"
        android:title="@string/title_premium" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more"
        android:title="@string/title_more" />

</menu>